API definition
- minor patch to the openapi specification (with no client consequences)
- define DTOs for response objects
- implement domain model -> DTO mappers
- define API as interface for the controllers
